kubernetes/django.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yhrek
---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: yhrek
  labels:
    app: django
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30785
  selector:
    app: django
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: django-set
  namespace: yhrek
spec:
  selector:
    matchLabels:
      app: django
  serviceName: django
  replicas: 1
  updateStrategy:
    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 0
#      maxSurge: 1
  template:
    metadata:
      namespace: yhrek
      labels:
        app: django
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ghcr.io/ardcoras/kululasku:yhrek
          name: django
          imagePullPolicy: Always
          ports:
            - containerPort: 30785
              name: django
          volumeMounts:
            - name: files
              mountPath: /media/uploads/receipts/
              subPath: receipts
            - name: files
              mountPath: /media/receipts/
              subPath: receipts
  volumeClaimTemplates:
    - metadata:
        name: files
        namespace: yhrek
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: do-block-storage
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: django-route
  namespace: yhrek
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`yhrek.fi`)
      kind: Rule
      middlewares:
        - name: redirect-non-to-www
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
    - match: Host(`www.yhrek.fi`)
      kind: Rule
      middlewares:
        - name: headers-default@file
      services:
        - name: django
          port: 8000
